--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
+    "mockdate": "^3.0.5",
     "prettier": "^2.6.2",
     "supertest": "^6.2.3",
     "ts-node-dev": "^1.1.8",
